# ibis_pycon_portugal_2025

./: .gitignore  README.md  main.py  pyproject.toml  slides.html  slides.qmd
code/: cleaning.py  eda.py  main.py  normalize.py  quickstart.ipynb
code/eda/: cleaning.py  plotting.py  recommendation.py
data/: coffees.csv  coffees.db  penguins.ddb
style/: light.scss
